compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/EnumCompanion.java
public final class CompanionContainer /* pack.CompanionContainer*/ {
  @org.jetbrains.annotations.NotNull()
  public static final @org.jetbrains.annotations.NotNull() pack.CompanionContainer.Companion Companion;

  public  CompanionContainer();//  .ctor()

  public static final class Companion /* pack.CompanionContainer.Companion*/ {
    @org.jetbrains.annotations.NotNull()
    public final @org.jetbrains.annotations.NotNull() kotlin.enums.EnumEntries<@org.jetbrains.annotations.NotNull() pack.CompanionContainer.Companion> getEntries();//  getEntries()

    @org.jetbrains.annotations.NotNull()
    public final @org.jetbrains.annotations.NotNull() pack.CompanionContainer.Companion @org.jetbrains.annotations.NotNull() [] values();//  values()

    @org.jetbrains.annotations.NotNull()
    public final @org.jetbrains.annotations.NotNull() pack.CompanionContainer.Companion valueOf(@org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() java.lang.String);//  valueOf(@org.jetbrains.annotations.NotNull() java.lang.String)

    private  Companion();//  .ctor()
  }
}
